# cas

./: .gitignore  .mcp.json  CHANGELOG.md  README.md
.claude/: CODEMAP.md
.claude/agents/: macos-onboarding-reviewer.md
.codex/: config.toml
.codex/agents/: code-reviewer.md  duplicate-detector.md  factory-supervisor.md  git-history-analyzer.md  issue-intelligence-analyst.md  learning-reviewer.md  rule-reviewer.md  session-summarizer.md  task-verifier.md
cas-cli/: Cargo.toml
cas-cli/.cursor/skills/github-repo/: SKILL.md
cas-cli/docs/: ARCHITECTURE.md
cas-cli/src/: builtins.rs  duplicate_check.rs
cas-cli/src/builtins/codex/skills/: cas-supervisor.md  cas-worker.md
cas-cli/src/builtins/codex/skills/cas-nuxt-playwright/: SKILL.md
cas-cli/src/builtins/codex/skills/cas-nuxt-playwright/references/: auth-fixture-template.md
cas-cli/src/builtins/codex/skills/cas-supervisor/references/: code-review-queue.md  planning.md  reference.md  worker-recovery.md  workflow.md
cas-cli/src/builtins/codex/skills/cas-worker/references/: close-gate.md
cas-cli/src/builtins/skills/: cas-supervisor-checklist.md  cas-supervisor.md
cas-cli/src/builtins/skills/cas-code-review/: SKILL.md
cas-cli/src/builtins/skills/cas-supervisor/references/: code-review-queue.md  planning.md  reference.md  workflow.md
cas-cli/src/builtins/skills/cas-worker/references/: close-gate.md
cas-cli/src/builtins/skills/session-learn/: SKILL.md
cas-cli/src/cli/: auth.rs  cloud.rs  codemap_cmd.rs  init.rs  memory.rs  update.rs
cas-cli/src/cli/factory/: daemon.rs  mod.rs
cas-cli/src/cli/hook/: config_gen.rs
cas-cli/src/cli/hook_tests/: tests.rs
cas-cli/src/cli/init/: docs_and_skill.rs
cas-cli/src/cli/integrate/: fs.rs  integrations.rs
cas-cli/src/cloud/: backfill.rs  config.rs  me.rs  mod.rs
cas-cli/src/cloud/syncer/: mod.rs  pull.rs  push.rs  tests.rs
cas-cli/src/config/: mod.rs  settings.rs
cas-cli/src/config/meta/seed/: llm.rs
cas-cli/src/hooks/: handlers.rs
cas-cli/src/hooks/handlers/: handlers_session.rs
cas-cli/src/hooks/handlers/handlers_events/: codemap.rs  project_overview.rs
cas-cli/src/hooks/handlers/handlers_middle/: post_tool.rs  utils.rs
cas-cli/src/hooks/handlers/handlers_middle/session_stop/: stop_flow.rs
cas-cli/src/hooks/handlers/handlers_tests/: mod.rs  ripple_path_scope.rs
cas-cli/src/mcp/: daemon.rs
cas-cli/src/mcp/server/: mod.rs  runtime.rs
cas-cli/src/mcp/tools/: mod.rs
cas-cli/src/mcp/tools/core/: memory.rs  mod.rs  task.rs
cas-cli/src/mcp/tools/core/agent_coordination/: task_claiming.rs
cas-cli/src/mcp/tools/core/task/: dependencies.rs  lifecycle.rs  query.rs
cas-cli/src/mcp/tools/core/task/lifecycle/: close_ops.rs
cas-cli/src/mcp/tools/core/workflow/: verification_tools.rs
cas-cli/src/mcp/tools/service/: core.rs  factory_ops.rs  mod.rs  worktree_verification_team_ops.rs
cas-cli/src/mcp/tools/types/: agent.rs  memory.rs
cas-cli/src/migration/: mod.rs
cas-cli/src/migration/migrations/: m201_spawn_queue_add_worker_spec.rs  mod.rs
cas-cli/src/store/: notifying_task.rs  syncing_task.rs
cas-cli/src/store/mock/: task_store.rs
cas-cli/src/ui/factory/: protocol.rs
cas-cli/src/ui/factory/app/: init.rs  mod.rs  sidecar_and_selection.rs
cas-cli/src/ui/factory/app/render_and_ops/: epic_workers.rs
cas-cli/src/ui/factory/app/render_and_ops/rendering/: detail_views.rs  dialogs.rs
cas-cli/src/ui/factory/daemon/: cloud_client.rs  fork_first.rs  imports.rs  mod.rs
cas-cli/src/ui/factory/daemon/runtime/: client_input.rs  gui_client.rs  queue_and_events.rs  relay.rs  teams.rs  ws_client.rs
cas-cli/src/ui/factory/director/: events.rs  mod.rs  tasks.rs
cas-cli/src/ui/factory/director/events_tests/: tests.rs
cas-cli/src/ui/widgets/: tasks.rs  utils.rs
cas-cli/tests/: active_team_id_integration_test.rs  factory_codex_skill_guardrails.rs  factory_mcp_ops_test.rs  pull_scoping_regression_test.rs  push_skipped_test.rs  service_tools_test.rs  team_backfill_test.rs  team_default_test.rs  team_memories_e2e_test.rs  team_pull_watermark_scope_test.rs  team_pull_wiring_test.rs  team_scope_e2e_test.rs  team_set_slug_resolution_test.rs  teams_fetch_test.rs  verify_before_claim_skill_test.rs
cas-cli/tests/fixtures/: mod.rs
cas-cli/tests/mcp_tools_test/: edge_cases.rs  memory_remember_contract.rs  memory_tools.rs  search_tools.rs  spec_tools.rs  system_tools.rs
cas-cli/tests/mcp_tools_test/entity_handler_tests/: mod.rs
cas-cli/tests/mcp_tools_test/server_protocol/: mod.rs
cas-cli/tests/mcp_tools_test/task_tools/: mod.rs  operations.rs  supervisor_review_flow.rs  verification_flow.rs
cas-cli/tests/snapshots/: component_output_test__doctor_snapshot.snap
crates/cas-factory/: Cargo.toml
crates/cas-factory/src/: config.rs  core.rs  director.rs  lib.rs  spec_resolver.rs
crates/cas-factory/tests/: director_data_integration.rs  factory_integration.rs  spec_resolver.rs
crates/cas-mcp/src/: types.rs
crates/cas-mux/: Cargo.toml
crates/cas-mux/benches/: alt_screen_scan.rs
crates/cas-mux/examples/: factory.rs
crates/cas-mux/src/: harness.rs  lib.rs  mux.rs  spec.rs
crates/cas-mux/src/mux_tests/: tests.rs
crates/cas-mux/src/pane/: mod.rs  tests.rs
crates/cas-mux/tests/: heterogeneous_spawn.rs  scroll_integration.rs
docs/brainstorms/: 2026-05-12-continue-on-block-code-review-spike.md  2026-05-12-otel-propagation-verification.md
docs/ideation/: 2026-04-28-cas-harness-portability-ideation.md  2026-04-30-cas-shell-helpers-distribution-ideation.md  2026-05-01-codex-cli-empirical-reference.md  2026-05-01-codex-session-format-spec.md  2026-05-01-codex-tui-session-loading-paths.md  2026-05-01-factory-close-merge-gap-research.md
docs/onboarding/: macbook-from-zero.md
docs/requests/: BUG-cloud-sync-pull-returns-zero-for-new-team-member.md  BUG-remember-defaults-to-personal-on-team-linked-project.md  BUG-verification-jail-blocks-clean-worker-closes.md  BUG-verification-jail-recovery-factory-branch-merge-gap.md  BUG-worker-pane-mouse-wheel-alt-screen.md  FEATURE-cloud-sync-pull-return-specs.md  FEATURE-nuxt-playwright-skill.md  (+1 more)
(+77 files in other folders)
